--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
         minSdkVersion 15
         targetSdkVersion 26
         versionCode 2
-        versionName "1.0"
+        versionName "1.0.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -41,6 +41,14 @@ dependencies {
     })
 
 
+
+
+
+    //Libreria lottie
+    compile 'com.airbnb.android:lottie:2.2.5'
+
+    compile 'com.github.clans:fab:1.6.4'
+
     compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
     compile 'com.android.support:cardview-v7:26.0.0-alpha1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -54,14 +62,11 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
     compile 'com.github.bumptech.glide:glide:4.3.0'
     compile 'com.google.firebase:firebase-ads:11.0.0'
+    compile 'com.google.firebase:firebase-messaging:11.0.0'
     testCompile 'junit:junit:4.12'
-
-    //Libreria lottie
-    compile 'com.airbnb.android:lottie:2.2.5'
-
-
     annotationProcessor 'com.github.bumptech.glide:compiler:4.3.0'
 }
+
 
 
 
