--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 27
     buildToolsVersion '27.0.0'
     defaultConfig {
-        applicationId 'com.dems.vald.spook'
+        applicationId 'com.riva.spook.valdemar'
         minSdkVersion 15
         targetSdkVersion 27
         versionCode 28
@@ -54,7 +54,6 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.firebase:firebase-core:11.0.0'
     compile 'com.google.firebase:firebase-database:11.0.0'
@@ -84,12 +83,11 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.0.2'
     compile 'com.jaredrummler:material-spinner:1.2.3'
     compile 'com.github.siyamed:android-shape-imageview:0.9.+@aar'
-
     compile 'com.github.bluejamesbond:textjustify-android:2.1.6'
-
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
+
 
 
 
